updated layout with css grid

--- a/index.html
+++ b/index.html
@@ -8,18 +8,35 @@
   <meta name="keywords" content="Laura Abowd, developer, UX Design, HTML, CSS, Ruby on Rails">
   <meta name="author" content="Laura Abowd">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-  <h1 class="text-center">Spam for Breakfast!</h1>
+  <div class="container">
+    <div class="container-header">
+      <div class="img-container">Smiley Face</div>
+      <div class="name-container">
+        <h1 class="text-center">Spam for Breakfast!</h1>
+      </div>
+    </div>
+    <div class="project-title">Selected Projects</div>
+    <div class="project-container">
+      <div class="project-japan-cycle">Japan Cycle</div>
+      <div class="project-active-social">Active Social</div>
+      <div class="project-classy">Classy</div>
+    </div>
+    <div class="about-me-title">About Me</div>
+    <div class="about-me-container">
+      <div class="history-container">History</div>
+      <div class="doing-now-container">What I'm doing now</div>
+      <div class="why-spam-container">Why the spam?</div>
+    </div>
+    <div class="contact-me">Contact Me</div>
+  </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 
 </html>
-
-
-
