updated css grid styling

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="container-header">
-      <div class="img-container">Smiley Face</div>
+      <div class="img-container">Smiley Face!</div>
       <div class="name-container">
         <h1 class="text-center">Spam for Breakfast!</h1>
       </div>
