added avatar image an changed background color

--- a/index.html
+++ b/index.html
@@ -15,9 +15,33 @@
 <body>
   <div class="container">
     <div class="container-header">
-      <div class="img-container">Smiley Face!</div>
+      <div class="text-header">
+      <h1>Howdy! I'm Laura. <br>Tech enthusiast & <br>former teacher.</h1>
+      <img src="assets/images/avatarImg.JPG" alt="profile picture">
+      <p>Teacher in Tech</p>
+      </div>
+    </div>
+      <div class="links-container">
+        <ul>
+          <li>LinkedIn</li>
+          <li>History</li>
+          <li>Musubi</li>
+        </ul>
+      </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
+
+</html>
+<!--  <div class="container">
+    <div class="container-header">
+      <div class="img-container">
+        <img src="assets/images/avatarImg.JPG" alt="profile picture"></div>
       <div class="name-container">
-        <h1 class="text-center">Spam for Breakfast!</h1>
+        <h1 class="text-center">Laura Abowd
+        Teacher in Tech</h1>
       </div>
     </div>
     <div class="project-title">Selected Projects</div>
@@ -33,10 +57,4 @@
       <div class="why-spam-container">Why the spam?</div>
     </div>
     <div class="contact-me">Contact Me</div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</body>
-
-</html>
+  </div> -->
