--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <div class="container-header">
       <div class="text-header">
-      <h1>Howdy! I'm Laura. <br>Tech enthusiast & <br>former teacher.</h1>
+      <h1>Howdy! I'm Laura! <br>Tech enthusiast & <br>former teacher.</h1>
       <img src="assets/images/avatarImg.JPG" alt="profile picture">
       <p>Teacher in Tech</p>
       </div>
