added about me page, updated content and added sidenavbar

--- a/index.html
+++ b/index.html
@@ -8,32 +8,61 @@
   <meta name="keywords" content="Laura Abowd, developer, UX Design, HTML, CSS, Ruby on Rails">
   <meta name="author" content="Laura Abowd">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div class="container">
     <div class="container-header">
-      <div class="text-header">
-      <h1>Howdy! I'm Laura! <br>Tech enthusiast & <br>former teacher.</h1>
-      <img src="assets/images/avatarImg.JPG" alt="profile picture">
-      <p>Teacher in Tech</p>
+      <div class="container-header-text">
+        <h1>Howdy! I'm Laura. <br>Tech enthusiast & former teacher.</h1>
       </div>
     </div>
-      <div class="links-container">
-        <ul>
-          <li>LinkedIn</li>
-          <li>History</li>
-          <li>Musubi</li>
-        </ul>
+    <!-- <div class="links-container"> -->
+      <div class="side-menu">
+        <img src="assets/images/musubiimg.JPG" alt="profile picture">
+        <p>Teacher in Tech</p>
+        <div class="menu-links">
+        <a href="about.html">About</a>
+        <a href="#my_projects">Work</a>
+        <a href="https://www.linkedin.com/in/laura-abowd/">LinkedIn</a>
+        <a href="#my_projects">Why the spam?</a>
+        </div>
       </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+      <div class="container">
+        <div class="row justify-content-center projects-container">
+          <a id="my_projects">
+            <div class="card" style="width: 18rem;">
+              <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p class="card-text">Classy</p>
+              </div>
+            </div>
+          </a>
+          <div class="card" style="width: 18rem;">
+            <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Japan Cycle</p>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Carebook</p>
+            </div>
+          </div>
+        </div>
+      </div>
+<div class="content-container-spam">
+  <p>Family background </p>
+</div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
-
 </html>
 <!--  <div class="container">
     <div class="container-header">
