updated bio, added avatar, changed background color

--- a/about.html
+++ b/about.html
@@ -4,22 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>About</title>
-
-  <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 
-<h1>This is all about me.</h1>
-   <div class="container-about-me">
 
-          <h2>About Me</h2>
-           <img src="assets/images/avatarImg.JPG" alt="profile picture">
-          <p>As a former elementary school teacher, I remain passionate about helping others.
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Leo urna molestie at elementum eu facilisis sed odio morbi. Etiam sit amet nisl purus in mollis. Ullamcorper dignissim cras tincidunt lobortis feugiat vivamus at augue. Fames ac turpis egestas integer eget aliquet nibh praesent. Etiam erat velit scelerisque in dictum non. Orci dapibus ultrices in iaculis nunc sed augue. Faucibus in ornare quam viverra orci. Turpis cursus in hac habitasse platea dictumst quisque sagittis. Bibendum ut tristique et egestas quis ipsum suspendisse.
-          </p>
-
-      </div>
 </body>
 
 </html>
