--- a/index.html
+++ b/index.html
@@ -10,80 +10,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container">
-    <div class="container-header">
-      <div class="container-header-text">
-        <h1>Howdy! I'm Laura. <br>Tech enthusiast & former teacher.</h1>
-      </div>
+  <div class="main-wrapper">
+    <!-- <div class="container"> -->
+    <!-- <div class="contact-wrapper"> -->
+    <div class="contact-inner-wrapper">
+      <header class="image-container" style="">
+        <img src="assets/images/musubi.png" alt="">
+        <div class="text-header-container">
+          <h1>Laura Abowd</h1>
+          <p>Former teacher | Programmer | Lifelong Learner </p>
+        </div>
+      </header>
     </div>
-    <!-- <div class="links-container"> -->
-      <div class="side-menu">
-        <img src="assets/images/musubiimg.JPG" alt="profile picture">
-        <p>Teacher in Tech</p>
-        <div class="menu-links">
-        <a href="about.html">About</a>
-        <a href="#my_projects">Work</a>
-        <a href="https://www.linkedin.com/in/laura-abowd/">LinkedIn</a>
-        <a href="#my_projects">Why the spam?</a>
+    <!-- image carousel  -->
+    <!--     <div class="slider-container">
+        <input type="radio" id="i1" name="images" checked />
+  <input type="radio" id="i2" name="images" />
+  <input type="radio" id="i3" name="images" />
+  <input type="radio" id="i4" name="images" />
+  <input type="radio" id="i5" name="images" />
+      <div class="slider-wrapper">
+        <div class="slider-image" id="one"><img src="assets/images/classyimg.png" class="card-img-top" alt="..."></div>
+        <div class="slider-image" id="two"><img src="assets/images/musubi.png" class="card-img-top" alt="..."></div>
+        <div class="slider-image" id="three"><img src="assets/images/musubiimg.jpg" class="card-img-top" alt="..."></div>
+        <div class="slider-image" id="four"><img src="assets/images/classyimg.png" class="card-img-top" alt="..."></div>
+      </div>
+    <div id="nav_slide">
+      <label for="i1" class="dots" id="dot1"></label>
+      <label for="i2" class="dots" id="dot2"></label>
+      <label for="i3" class="dots" id="dot3"></label>
+      <label for="i4" class="dots" id="dot4"></label>
+      <label for="i5" class="dots" id="dot5"></label>
+  </div>
+
+    </div> -->
+    <!-- image carousel  -->
+    <div class="content-container">
+      <div class="body-container">
+        <h2>About</h2>
+        <!--      <img src="assets/images/avatarImg.JPG" alt="profile picture"> -->
+        <div class="hero">
+          <div id="avatar">
+            <img src="assets/images/laura-abowd.png" class="profile-img" alt="">
+          </div>
+          <!--    <div> -->
+          <h6 class=text-6> Howdy!</h6>
+          <p>
+            I'm Laura. A former elementary school teacher who is passionate about bringing positive experiences to users through art and design.
+            <!-- For ten years, I taught first and second graders, collaborating with other teachers, administrators, parents, and the community in order to make meaningful connections to student learning. -->
+            I took an interest in web design after being tasked with creating our team's website. I then started my journey into tech taking night courses at the local Community College.
+            After learning the basics in code and succesfully designing and prototyping two applications, I enrolled in a coding bootcamp in Tokyo, Japan.
+            I am continuing to learn and grow in this ever-changing industry and I'm excited to use my new found skills to continue to help others.
+          </p>
+          <!--  </div> -->
         </div>
       </div>
-      <div class="container">
-        <div class="row justify-content-center projects-container">
-          <a id="my_projects">
-            <div class="card" style="width: 18rem;">
-              <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Classy</p>
+      <h2>Projects</h2>
+      <h5>Classy</h5>
+      <p>An app dedicated to helping educators create and manage their class lists.</p>
+      <!--   projects -->
+      <div class="body-container">
+        <!--      <img src="assets/images/classyimg.png"  alt="..."> -->
+        <!--   <div class="card-body"> -->
+        <!--  <div class="card-text"> -->
+        <!--     bootstrap image carousel -->
+        <div class="project-card">
+          <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active item">
+                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
               </div>
             </div>
-          </a>
-          <div class="card" style="width: 18rem;">
-            <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Japan Cycle</p>
-            </div>
-          </div>
-          <div class="card" style="width: 18rem;">
-            <img src="assets/images/classyHomePage.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Carebook</p>
-            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
         </div>
+        <!--     bootstrap image carousel -->
+        <div class="project-details-container">
+          <div class="project-details">
+            <p>My Role</p>
+          </div>
+          <div class="project-details">
+            <p>Tools</p>
+          </div>
+          <div class="project-details">
+            <p>Timeline</p>
+          </div>
+          <div class="">Product Lead, UX Designer, Front-End Developer</div>
+          <div class="">Ruby on Rails, Figma, Github</div>
+          <div class="">Two Weeks</div>
+        </div>
+        <!-- </div> -->
+        <!--    </div> -->
+        <!--        <div class="card">
+          <img src="assets/images/classyimg.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <div class="card-text">
+              <p>Classy</p>
+              <p>Timeframe:</p>
+            </div>
+          </div>
+        </div> -->
       </div>
-<div class="content-container-spam">
-  <p>Family background </p>
-</div>
+      <div class="body-container">
+        <h2>Contact</h2>
+      </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <footer id="footer">This is the footer</footer>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
 </html>
-<!--  <div class="container">
-    <div class="container-header">
-      <div class="img-container">
-        <img src="assets/images/avatarImg.JPG" alt="profile picture"></div>
-      <div class="name-container">
-        <h1 class="text-center">Laura Abowd
-        Teacher in Tech</h1>
-      </div>
-    </div>
-    <div class="project-title">Selected Projects</div>
-    <div class="project-container">
-      <div class="project-japan-cycle">Japan Cycle</div>
-      <div class="project-active-social">Active Social</div>
-      <div class="project-classy">Classy</div>
-    </div>
-    <div class="about-me-title">About Me</div>
-    <div class="about-me-container">
-      <div class="history-container">History</div>
-      <div class="doing-now-container">What I'm doing now</div>
-      <div class="why-spam-container">Why the spam?</div>
-    </div>
-    <div class="contact-me">Contact Me</div>
-  </div> -->
