added two more projects

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="assets/images/musubi.png" alt="">
         <div class="text-header-container">
           <h1>Laura Abowd</h1>
-          <p>Former teacher | Programmer | Lifelong Learner </p>
+          <p>Former teacher | Developer | Spam Enthusiast </p>
         </div>
       </header>
     </div>
@@ -51,7 +51,7 @@
     <!-- image carousel  -->
     <div class="content-container">
       <div class="body-container">
-        <h2>About</h2>
+        <h2>About Me</h2>
         <!--      <img src="assets/images/avatarImg.JPG" alt="profile picture"> -->
         <div class="hero">
           <div id="avatar">
@@ -60,26 +60,23 @@
           <!--    <div> -->
           <h6 class=text-6> Howdy!</h6>
           <p>
-            I'm Laura. A former elementary school teacher who is passionate about bringing positive experiences to users through art and design.
+            I'm Laura, a former elementary school teacher with ten years experience.
             <!-- For ten years, I taught first and second graders, collaborating with other teachers, administrators, parents, and the community in order to make meaningful connections to student learning. -->
-            I took an interest in web design after being tasked with creating our team's website. I then started my journey into tech taking night courses at the local Community College.
-            After learning the basics in code and succesfully designing and prototyping two applications, I enrolled in a coding bootcamp in Tokyo, Japan.
+            <!--        I took an interest in web design after creating  my team's website.  -->I started my journey into tech taking night courses at the local Community College.
+            After learning the basics in code and succesfully designing and prototyping two applications, I enrolled in a coding bootcamp in Tokyo, Japan. I remain passionate about helping others; bringing positive experiences to users through art and design.
             I am continuing to learn and grow in this ever-changing industry and I'm excited to use my new found skills to continue to help others.
           </p>
           <!--  </div> -->
         </div>
       </div>
-      <h2>Projects</h2>
-      <h5>Classy</h5>
-      <p>An app dedicated to helping educators create and manage their class lists.</p>
       <!--   projects -->
       <div class="body-container">
-        <!--      <img src="assets/images/classyimg.png"  alt="..."> -->
-        <!--   <div class="card-body"> -->
-        <!--  <div class="card-text"> -->
+        <h2>Projects</h2>
+        <h5>Classy</h5>
+        <p>An app dedicated to helping educators create and manage their class lists.</p>
         <!--     bootstrap image carousel -->
         <div class="project-card">
-          <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
             <div class="carousel-inner">
               <div class="carousel-item active item">
                 <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
@@ -101,7 +98,7 @@
             </a>
           </div>
         </div>
-        <!--     bootstrap image carousel -->
+        <!--     end of bootstrap image carousel -->
         <div class="project-details-container">
           <div class="project-details">
             <p>My Role</p>
@@ -116,17 +113,93 @@
           <div class="">Ruby on Rails, Figma, Github</div>
           <div class="">Two Weeks</div>
         </div>
-        <!-- </div> -->
-        <!--    </div> -->
-        <!--        <div class="card">
-          <img src="assets/images/classyimg.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <div class="card-text">
-              <p>Classy</p>
-              <p>Timeframe:</p>
+      </div>
+
+      <div class="body-container">
+        <h5>Japan Cycle</h5>
+        <p>An app to help people search, sell, and purchase bicylces in Tokyo.</p>
+        <!--     bootstrap image carousel -->
+        <div class="project-card">
+          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active item">
+                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
+              </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-        </div> -->
+        </div>
+        <!--     end of bootstrap image carousel -->
+        <div class="project-details-container">
+          <div class="project-details">
+            <p>My Role</p>
+          </div>
+          <div class="project-details">
+            <p>Tools</p>
+          </div>
+          <div class="project-details">
+            <p>Timeline</p>
+          </div>
+          <div class="">Product Lead, UX Designer, Front-End Developer</div>
+          <div class="">Ruby on Rails, Figma, Github</div>
+          <div class="">One Week</div>
+        </div>
+      </div>
+      <div class="body-container">
+        <h5>Carebook</h5>
+        <p>A class project. An app dedicated to helping users stay up-to-date with their medical appointments.</p>
+        <!--     bootstrap image carousel -->
+        <div class="project-card">
+          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+            <div class="carousel-inner">
+              <div class="carousel-item active item">
+                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
+              </div>
+              <div class="carousel-item item">
+                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <!--     end of bootstrap image carousel -->
+        <div class="project-details-container">
+          <div class="project-details">
+            <p>My Role</p>
+          </div>
+          <div class="project-details">
+            <p>Tools</p>
+          </div>
+          <div class="project-details">
+            <p>Timeline</p>
+          </div>
+          <div class="">Product Lead, UX Designer, Front-End Developer</div>
+          <div class="">Xcode, Figma</div>
+          <div class="">Eight Weeks</div>
+        </div>
       </div>
       <div class="body-container">
         <h2>Contact</h2>
