--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+ <!-- https://fonts.googleapis.com/css?family=Abril+Fatface|Open+Sans&display=swap" rel="stylesheet"> -->
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
         <img src="assets/images/musubi.png" alt="">
         <div class="text-header-container">
           <h1>Laura Abowd</h1>
-          <p>Former teacher | Developer | Spam Enthusiast </p>
+          <p>Former Teacher | Full-Stack Web Developer </p>
         </div>
       </header>
     </div>
@@ -60,11 +62,13 @@
           <!--    <div> -->
           <h6 class=text-6> Howdy!</h6>
           <p>
-            I'm Laura, a former elementary school teacher with ten years experience.
+            I'm Laura, a former public school teacher with over ten years experience in the classroom. I am super passionate about helping others and want to create positive experiences for people through design and technology that solves real-world needs.
             <!-- For ten years, I taught first and second graders, collaborating with other teachers, administrators, parents, and the community in order to make meaningful connections to student learning. -->
-            <!--        I took an interest in web design after creating  my team's website.  -->I started my journey into tech taking night courses at the local Community College.
-            After learning the basics in code and succesfully designing and prototyping two applications, I enrolled in a coding bootcamp in Tokyo, Japan. I remain passionate about helping others; bringing positive experiences to users through art and design.
-            I am continuing to learn and grow in this ever-changing industry and I'm excited to use my new found skills to continue to help others.
+            <!--        I took an interest in web design after creating  my team's website.  -->
+            <br><br>
+            I started my journey into programming by taking night courses at my local community college. After learning the basics and succesfully designing and prototyping multiple applications, I enrolled in a full-time coding program in Tokyo, Japan.
+            <br><br>
+            I am continuing my development by yada yada and, of course, eating lots of Spam for breakfast.
           </p>
           <!--  </div> -->
         </div>
@@ -72,30 +76,34 @@
       <!--   projects -->
       <div class="body-container">
         <h2>Projects</h2>
-        <h5>Classy</h5>
-        <p>An app dedicated to helping educators create and manage their class lists.</p>
-        <!--     bootstrap image carousel -->
-        <div class="project-card">
-          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
-            <div class="carousel-inner">
-              <div class="carousel-item active item">
-                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
+        <div class="project-container">
+          <div class="project-information">
+            <h5>Classy</h5>
+            <p>An app dedicated to helping educators create and manage their class lists.</p>
+          </div>
+          <!--     bootstrap image carousel -->
+          <div class="project-card">
+            <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+              <div class="carousel-inner">
+                <div class="carousel-item active item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
               </div>
-              <div class="carousel-item item">
-                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item item">
-                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
-              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
           </div>
         </div>
         <!--     end of bootstrap image carousel -->
@@ -110,39 +118,48 @@
             <p>Timeline</p>
           </div>
           <div class="">Product Lead, UX Designer, Front-End Developer</div>
-          <div class="">Ruby on Rails, Figma, Github</div>
+          <div class="">
+            <ul>
+              <li>Ruby on Rails</li>
+              <li>Figma</li>
+              <li>Github</li>
+            </ul>
+            </div>
           <div class="">Two Weeks</div>
         </div>
       </div>
-
       <div class="body-container">
-        <h5>Japan Cycle</h5>
-        <p>An app to help people search, sell, and purchase bicylces in Tokyo.</p>
-        <!--     bootstrap image carousel -->
-        <div class="project-card">
-          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
-            <div class="carousel-inner">
-              <div class="carousel-item active item">
-                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
+        <div class="project-container">
+          <!--     bootstrap image carousel -->
+          <div class="project-card">
+            <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+              <div class="carousel-inner">
+                <div class="carousel-item active item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                </div>
               </div>
-              <div class="carousel-item item">
-                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item item">
-                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
-              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+          </div>
+        <!--     end of bootstrap image carousel -->
+          <div class="project-information">
+            <h5>Japan Cycle</h5>
+            <p>An app for users to search, sell, and purchase bicycles around Japan.</p>
           </div>
         </div>
-        <!--     end of bootstrap image carousel -->
         <div class="project-details-container">
           <div class="project-details">
             <p>My Role</p>
@@ -159,53 +176,15 @@
         </div>
       </div>
       <div class="body-container">
-        <h5>Carebook</h5>
-        <p>A class project. An app dedicated to helping users stay up-to-date with their medical appointments.</p>
-        <!--     bootstrap image carousel -->
-        <div class="project-card">
-          <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
-            <div class="carousel-inner">
-              <div class="carousel-item active item">
-                <img src="assets/images/musubi.png" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item item">
-                <img src="assets/images/musubiimg.jpg" class="d-block w-50" alt="...">
-              </div>
-              <div class="carousel-item item">
-                <img src="assets/images/classyimg.png" class="d-block w-50" alt="...">
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-        <!--     end of bootstrap image carousel -->
-        <div class="project-details-container">
-          <div class="project-details">
-            <p>My Role</p>
-          </div>
-          <div class="project-details">
-            <p>Tools</p>
-          </div>
-          <div class="project-details">
-            <p>Timeline</p>
-          </div>
-          <div class="">Product Lead, UX Designer, Front-End Developer</div>
-          <div class="">Xcode, Figma</div>
-          <div class="">Eight Weeks</div>
-        </div>
-      </div>
-      <div class="body-container">
-        <h2>Contact</h2>
+        <h5>What's with the Spam?</h5>
+        <p>
+          Because it's delicious. Also, it's a nod to my Japanese-Hawaiian heritage and a big part of my childhood. If you've never tried it here's the skinny. Fry a few eggs, throw them over a bed of steamed rice, toss in 2 slices of pan-fried Spam then top this beautiful mess with ketchup and you will be on your way to a Hawaiian breakfast paradise.
+        </p>
       </div>
     </div>
-    <footer id="footer">This is the footer</footer>
+    <footer id="footer">
+      <h2>Contact</h2>
+    </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
