added images to image carousel

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <h2>About Me</h2>
         <div class="about-me-container">
           <div id="avatar">
-            <img src="assets/images/laura-abowd.png" class="profile-img" alt="">
+            <img src="assets/images/avatarImg.jpg" class="profile-img" alt="">
           </div>
           <!--   <h6 class=text-6> Howdy!</h6> -->
           <p class="about-me">
@@ -233,16 +233,18 @@
           </div>
           <!--     bootstrap image carousel -->
           <div class="project-card">
-            <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+            <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+             <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner">
+
                 <div class="carousel-item active item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-classy-1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-classy-2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-classy-3.png" class="d-block w-100" alt="...">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -256,7 +258,7 @@
             </div>
           </div>
         </div>
-        <!--     end of bootstrap image carousel -->
+        <!--     end of Classy bootstrap image carousel -->
         <div class="project-details-container">
           <div class="project-details">
             <p>My Role</p>
@@ -280,12 +282,12 @@
       </div>
       <div class="body-container">
         <div class="project-container">
-          <!--     bootstrap image carousel -->
+          <!--   Japan Cycle  bootstrap image carousel -->
           <div class="project-card">
-            <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
+            <div id="carousel-two" class="carousel slide carousel-container" data-interval="false">
               <div class="carousel-inner">
                 <div class="carousel-item active item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-japancycle-1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item item carousel-image">
                   <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
@@ -304,7 +306,7 @@
               </a>
             </div>
           </div>
-          <!--     end of bootstrap image carousel -->
+          <!--     end of bootstrap Japan Cycle image carousel -->
           <div class="project-information">
             <h5>Japan Cycle</h5>
             <p>An app for users to search, sell, and purchase bicycles around Japan.</p>
@@ -326,7 +328,7 @@
         </div>
       </div>
       <div class="body-container">
-        <h5>What's with the Spam?</h5>
+        <h2>What's with the Spam?</h2>
         <p>
           Because it's delicious. Also, it's a nod to my Japanese-Hawaiian heritage and a big part of my childhood. If you've never tried it here's the skinny. Fry a few eggs, throw them over a bed of steamed rice, toss in 2 slices of pan-fried Spam then top this beautiful mess with ketchup and you will be on your way to a Hawaiian breakfast paradise.
         </p>
