--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
-  <link href="https://fonts.googleapis.com/css?family=Lora:400,700|Playfair+Display:900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display:900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -211,13 +211,13 @@
         <h2>About Me</h2>
         <div class="about-me-container">
           <div id="avatar">
-            <img src="assets/images/avatarImg.jpg" class="profile-img" alt="">
+            <img src="assets/images/laura-abowd-profile.jpg" class="profile-img" alt="">
           </div>
           <!--   <h6 class=text-6> Howdy!</h6> -->
           <p class="about-me">
             I'm Laura, a former public school teacher with over ten years experience in the classroom. I am super passionate about helping others and want to create positive experiences for people through design and technology that solves real-world needs.
             <br><br>
-            I started my journey into programming by taking night courses at my local community college. After learning the basics and succesfully designing and prototyping multiple applications, I enrolled in a full-time coding program in Tokyo, Japan.
+            I started my journey into programming taking night courses at my local community college. After learning the basics and succesfully designing and prototyping mobile applications, I enrolled in a full-time coding program in Tokyo, Japan.
             <br><br>
             I am continuing my development by yada yada and, of course, eating lots of Spam for breakfast.
           </p>
@@ -290,17 +290,20 @@
                   <img src="assets/images/laura-abowd-japancycle-1.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-japancycle-2.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item item carousel-image">
-                  <img src="assets/images/browser-window.png" class="d-block w-100" alt="...">
+                  <img src="assets/images/laura-abowd-japancycle-3.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/laura-abowd-japancycle-4.png" class="d-block w-100" alt="...">
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carousel-two" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carousel-two" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
@@ -323,7 +326,13 @@
             <p>Timeline</p>
           </div>
           <div class="">Product Lead, UX Designer, Front-End Developer</div>
-          <div class="">Ruby on Rails, Figma, Github</div>
+          <div class="">
+            <ul>
+              <li>Ruby on Rails</li>
+              <li>Figma</li>
+              <li>Github</li>
+            </ul>
+          </div>
           <div class="">One Week</div>
         </div>
       </div>
