added third image carousel for Carebook

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           </div>
           <!--     bootstrap image carousel -->
           <div class="project-card">
-            <div id="carouselExampleControls" class="carousel slide carousel-container" data-ride="carousel">
+            <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
              <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner">
 
@@ -280,6 +280,8 @@
           <div class="">Two Weeks</div>
         </div>
       </div>
+
+<!--       Japan Cycle project  -->
       <div class="body-container">
         <div class="project-container">
           <!--   Japan Cycle  bootstrap image carousel -->
@@ -325,7 +327,7 @@
           <div class="project-details">
             <p>Timeline</p>
           </div>
-          <div class="">Product Lead, UX Designer, Front-End Developer</div>
+          <div class="">UX Designer, Front-End & Back-End Developer</div>
           <div class="">
             <ul>
               <li>Ruby on Rails</li>
@@ -336,15 +338,68 @@
           <div class="">One Week</div>
         </div>
       </div>
+      <div class="project-container">
+          <div class="project-information">
+            <h5>Carebook</h5>
+            <p>An app dedicated to helping educators create and manage their class lists.</p>
+          </div>
+          <!--   Carebook  bootstrap image carousel -->
+          <div class="project-card">
+            <div id="carousel-three" class="carousel slide carousel-container" data-interval="false">
+             <!--  replace data-ride="carousel" with  data-interval="false"  -->
+              <div class="carousel-inner carebook-carousel">
+
+                <div class="carousel-item active item carousel-image">
+                  <img src="assets/images/laura-abowd-carebook-1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/laura-abowd-carebook-2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item item carousel-image">
+                  <img src="assets/images/laura-abowd-carebook-3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carousel-three" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel-three" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+        </div>
+                <div class="project-details-container">
+          <div class="project-details">
+            <p>My Role</p>
+          </div>
+          <div class="project-details">
+            <p>Tools</p>
+          </div>
+          <div class="project-details">
+            <p>Timeline</p>
+          </div>
+          <div class="">Product Lead, UX Designer, Front-End Developer</div>
+          <div class="">
+            <ul>
+              <li>Ruby on Rails</li>
+              <li>Figma</li>
+              <li>Github</li>
+            </ul>
+          </div>
+          <div class="">Two Weeks</div>
+        </div>
       <div class="body-container">
-        <h2>What's with the Spam?</h2>
-        <p>
+        <h2>Why the Spam?</h2>
+        <p id="p-container">
           Because it's delicious. Also, it's a nod to my Japanese-Hawaiian heritage and a big part of my childhood. If you've never tried it here's the skinny. Fry a few eggs, throw them over a bed of steamed rice, toss in 2 slices of pan-fried Spam then top this beautiful mess with ketchup and you will be on your way to a Hawaiian breakfast paradise.
         </p>
       </div>
     </div>
     <footer id="footer">
       <h2>Contact</h2>
+
     </footer>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
