updated mobile style

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           <ul>
             <li>Figma</li>
             <li>Swift</li>
-            <li>Xocde</li>
+            <li>Xcode</li>
           </ul>
         </div>
         <div class="">Eight weeks</div>
