--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <!--     end of Active Social image container -->
           <div class="project-information">
             <h5>Active Social</h5>
-            <h6>UX // Design // Front End Developer</h6>
+            <h6>UX Design // Front End Developer</h6>
             <p>Active Social is an Austin based video production company. I worked directly with the company in order to help establish their web presence. <!-- Starting from scratch, I designed and built their website to include  -->
             </p>
             <div class="technology-container">
@@ -293,7 +293,7 @@
         <div class="project-container">
           <div class="project-information">
             <h5>Classy</h5>
-            <h6>UX // Design // Product Lead // Front End Developer</h6>
+            <h6>UX Design // Product Lead // Front End Developer</h6>
             <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort update student information and create class lists. My team and I completed the MVP in two weeks. </p>
             <div class="technology-container">
               <p>Technologies Used:</p>
@@ -446,7 +446,7 @@
           <!--     end of bootstrap Japan Cycle image carousel -->
           <div class="project-information">
             <h5>Japan Cycle</h5>
-            <h6>UX // Design // Full Stack Developer</h6>
+            <h6>UX Design // Full Stack Developer</h6>
             <p>An app for users to search, sell, and purchase bicycles around Japan. My team and I completed the MVP in one week.</p>
             <div class="technology-container">
               <p>Technologies Used:</p>
