--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           <div class="project-information">
             <h5>Classy</h5>
             <h6>UX Design // Product Lead // Front End Developer</h6>
-            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort update student information and create class lists. My team and I completed the MVP in two weeks. </p>
+            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort students based on needs in order to create better class lists. My team and I completed the MVP in two weeks. </p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
