Japan Cycle description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Playfair+Display:900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -244,7 +245,7 @@
           <div class="project-information">
             <h5>Active Social</h5>
             <h6>UX Design // Front End Developer</h6>
-            <p>Active Social is an Austin based video production company. I worked directly with the company in order to help establish their web presence. <!-- Starting from scratch, I designed and built their website to include  -->
+            <p>Active Social is an Austin based video production company. I worked directly with the company in order to help establish their web presence. I built Active Social from scratch to feature a way to display their video content and allow users to easily connect with them.  <!-- Starting from scratch, I designed and built their website to include  -->
             </p>
             <div class="technology-container">
               <p>Technologies Used:</p>
@@ -294,7 +295,7 @@
           <div class="project-information">
             <h5>Classy</h5>
             <h6>UX Design // Product Lead // Front End Developer</h6>
-            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort students based on needs in order to create better class lists. My team and I completed the MVP in two weeks. </p>
+            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort students into their next year's classes based on individual needs. My team and I completed the MVP in two weeks. </p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -349,6 +350,7 @@
                 <path d="M59.6124 39.9999C59.6124 45.257 55.3312 49.5237 50.0562 49.5237C44.7812 49.5237 40.5 45.257 40.5 39.9999C40.5 34.7427 44.7812 30.4761 50.0562 30.4761C55.3312 30.4761 59.6124 34.7427 59.6124 39.9999Z" fill="white" stroke="#001640" stroke-width="4" stroke-linejoin="round" />
               </svg>
             </div>
+            <i class="fas fa-arrow-right"></i>
             <a class="view-live-btn" href="http://www.classyeducation.io/" target="_blank">View Site</a>
           </div>
           <!--    Classy image carousel -->
@@ -447,7 +449,7 @@
           <div class="project-information">
             <h5>Japan Cycle</h5>
             <h6>UX Design // Full Stack Developer</h6>
-            <p>An app for users to search, sell, and purchase bicycles around Japan. My team and I completed the MVP in one week.</p>
+            <p>A web application for users to search, sell, and purchase bicycles around Japan. For this project, my team and I focused on the user story in order to develop a marketplace application. We completed the MVP in one week.</p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -530,7 +532,7 @@
         <div class="project-container">
           <div class="project-information">
             <h5>Carebook</h5>
-            <p>A mobile app dedicated to helping users set reminders for medical appoinments.</p>
+            <p>A mobile app dedicated to helping users set reminders for medical appoinments. During this school project, we focused on the user flow and architecture of our mobile app. </p>
           </div>
           <!--   Carebook  bootstrap image carousel -->
           <div class="project-card">
