Classy and Japan Cycle project info

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <div class="project-information">
             <h5>Classy</h5>
             <h6>UX Design // Product Lead // Front End Developer</h6>
-            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort students into their next year's classes based on individual needs. My team and I completed the MVP in two weeks. </p>
+            <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows educators to sort students into their next year's classes based on individual student needs. My team and I completed the MVP in two weeks. </p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -350,11 +350,11 @@
                 <path d="M59.6124 39.9999C59.6124 45.257 55.3312 49.5237 50.0562 49.5237C44.7812 49.5237 40.5 45.257 40.5 39.9999C40.5 34.7427 44.7812 30.4761 50.0562 30.4761C55.3312 30.4761 59.6124 34.7427 59.6124 39.9999Z" fill="white" stroke="#001640" stroke-width="4" stroke-linejoin="round" />
               </svg>
             </div>
-            <i class="fas fa-arrow-right"></i>
+            <!-- <i class="fas fa-arrow-right"></i> -->
             <a class="view-live-btn" href="http://www.classyeducation.io/" target="_blank">View Site</a>
           </div>
           <!--    Classy image carousel -->
-          <div class="project-card">
+          <div class="project-card classy-project-card">
             <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
               <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner">
@@ -449,7 +449,7 @@
           <div class="project-information">
             <h5>Japan Cycle</h5>
             <h6>UX Design // Full Stack Developer</h6>
-            <p>A web application for users to search, sell, and purchase bicycles around Japan. For this project, my team and I focused on the user story in order to develop a marketplace application. We completed the MVP in one week.</p>
+            <p>Japan Cycle is a web application for users to search, sell, and purchase bicycles around Japan. For this project, my team and I focused on building a marketplace application to serve users with specific needs in the Tokyo area. We completed the MVP in one week.</p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
