--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
           <div class="project-information">
             <h5>Japan Cycle</h5>
             <h6>UX Design // Full Stack Developer</h6>
-            <p>Japan Cycle is a web application for users to search, sell, and purchase bicycles around Japan. For this project, my team and I focused on building a marketplace application to serve users with specific needs in the Tokyo area. We completed the MVP in one week.</p>
+            <p>Japan Cycle is a web application for users to search, sell, and purchase bicycles around Japan. For this project, my team and I focused on building a marketplace application to serve users in the Tokyo area. We completed the MVP in one week.</p>
             <div class="technology-container">
               <p>Technologies Used:</p>
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
