added japan-cycle site

--- a/index.html
+++ b/index.html
@@ -958,6 +958,13 @@
                   fill="white" stroke="#A9AEB8" stroke-width="4" stroke-linejoin="round" />
               </svg>
             </div>
+              <a class="view-live-btn" href="https://japan-cycle-demo.herokuapp.com/" target="_blank" rel="nofollow noopener">
+              <span>View Site</span>
+              <svg class="view-arrow" width="13px" height="10px" viewBox="0 0 13 10">
+                <path d="M1,5 L11,5"></path>
+                <polyline points="8 1 12 5 8 9"></polyline>
+              </svg>
+            </a>
           </div>
           <div class="divider d3"></div>
           <div class="project-image cb-img">
