--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Laura Abowd</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="description" content="Teacher in Tech, Product Designer based in Austin, Texas">
   <meta name="keywords" content="Laura Abowd, developer, UX Design, HTML, CSS, Ruby on Rails">
