updated home page

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
               technology that solves real-world needs. </p>
             <p>
               I started my journey into programming taking night courses at my local community college. After learning
-              the basics and succesfully designing and prototyping two mobile applications, I enrolled in a full-time
+              the basics and successfully designing and prototyping two mobile applications, I enrolled in a full-time
               coding program in Tokyo, Japan.
             </p>
             <p>
