--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 
 <body>
   <div class="main-wrapper">
-    <!-- <div class="container"> -->
-    <!-- <div class="contact-wrapper"> -->
     <div class="contact-inner-wrapper">
       <header class="image-container" style="">
         <div class="hero-image">
@@ -504,7 +502,6 @@
           <div id="avatar">
             <img src="assets/images/laura-abowd-profile.jpg" class="profile-img" alt="">
           </div>
-          <!--   <h6 class=text-6> Howdy!</h6> -->
           <div class="about-me">
             <p>I'm Laura, a former public school teacher with over ten years experience in the classroom. I am super
               passionate about helping others and want to create positive experiences for people through design and
@@ -617,7 +614,6 @@
           <div class="divider d1"></div>
           <div class="project-image cl-img">
             <div id="carouselExampleControls" class="carousel slide carousel-container" data-interval="false">
-              <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner">
                 <div class="carousel-item active item carousel-image">
                   <img src="assets/images/laura-abowd-classy-1.png" class="d-block w-100" alt="...">
@@ -970,7 +966,6 @@
           <div class="divider d3"></div>
           <div class="project-image cb-img">
             <div id="carousel-three" class="carousel slide carousel-container" data-interval="false">
-              <!--  replace data-ride="carousel" with  data-interval="false"  -->
               <div class="carousel-inner carebook-carousel">
                 <div class="carousel-item active item carousel-image">
                   <img src="assets/images/laura-abowd-carebook-1.png" class="d-block w-100" alt="...">
@@ -1011,6 +1006,17 @@
           </div>
         </div>
       </div>
+      <!-- teacherlife container  -->
+     <!--  <div class="body-container">
+        <h2>#teacherlife</h2>
+        <div class="teacher-life-container">
+          <img src="assets/images/classroom-img-1.png" alt="">
+          <img src="assets/images/classroom-img-2.png" alt="">
+          <p class="teaching-bio">This is my teaching bio. I have worked with so many different students. I love teaching I have taught in Dallas and Austin. </p>
+          <img src="assets/images/classroom-img-3.png" alt="">
+          <img src="assets/images/classroom-img-4.png" alt="">
+        </div>
+      </div> -->
       <div class="body-container">
         <h2>Why the Spam?</h2>
         <p id="p-container">
