--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Laura Abowd</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
-  <meta name="description" content="Teacher in Tech, Product Designer based in Austin, Texas">
+  <meta name="description" content="Web Developer based in Austin, Texas">
   <meta name="keywords" content="Laura Abowd, developer, UX Design, HTML, CSS, Ruby on Rails">
   <meta name="author" content="Laura Abowd">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
