--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
         <h2>About Me</h2>
         <div class="about-me-container">
           <div id="avatar">
-            <img src="assets/images/laura-abowd-profile.jpg" class="profile-img"  alt="avatar">
-             <div class="text-popover" data-toggle="popover" data-content="Howdy!">
+            <img src="assets/images/laura-abowd-profile.jpg" class="profile-img" alt="avatar">
+            <div class="text-popover" data-toggle="popover" data-content="Howdy!">
             </div>
           </div>
           <div class="about-me">
@@ -324,7 +324,7 @@
             <h5>Classy</h5>
             <h6>UX Design + Product Lead + Front End Developer</h6>
             <p>Classy is an app dedicated to helping educators create and manage their class lists. Classy allows
-              educators to sort students into their next year's classes based on individual student needs. My team and I
+              educators to sort students into their next year's classes based on individual student needs. For this class project, my team and I
               completed the MVP in two weeks. </p>
             <div class="technology-container">
               <svg class="technology-icons" width="80" height="80" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -423,7 +423,7 @@
           <div class="project-information jc-info">
             <h5>Japan Cycle</h5>
             <h6>UX Design + Full Stack Developer</h6>
-            <p>Japan Cycle is a web application for users to search, sell, and purchase bicycles around Japan. For this
+            <p>Japan Cycle is a web application for users to search, sell, and purchase bicycles around Japan. For this class
               project, my team and I focused on building a marketplace application to serve users in the Tokyo area. We
               completed the MVP in one week.</p>
             <div class="technology-container">
@@ -524,12 +524,7 @@
           </div>
         </div>
       </div>
-      <div class="body-container">
-        <h2>Why the Spam?</h2>
-        <p id="p-container">
-          I'd love to buy you coffee and tell you all about it.
-        </p>
-      </div>
+
     </div>
   </div>
   <footer>
